[project]
name = "mme_analyzer"
version = "0.1.0"
description = "MME analyzer support app for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MME360" }
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
